src/snapshots/alma__parser__tests__test_module_parser__pattern_matching_named_pattern-3.snap
---
source: src/parser.rs
assertion_line: 3937
expression: "parse(\"\\\nmodule Test\n\ntest = when test is\n    _ as hello -> True\n    hi as hello -> True\n    \\\"hello\\\" as hello -> True\n    5 as hello -> True\n\")"
---
Input:

module Test

test = when test is
    _ as hello -> True
    hi as hello -> True
    "hello" as hello -> True
    5 as hello -> True


Result:

(
    Module {
        name: ModuleName {
            parts: [
                CapitalizedIdentifier {
                    name: SymbolU32 {
                        value: 1,
                    },
                    span: Index(
                        0,
                    ),
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [],
        imports: [
            Import {
                span: Index(
                    1,
                ),
                module_name: ModuleName {
                    parts: [
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 7,
                            },
                            span: Index(
                                1,
                            ),
                        },
                    ],
                    full_name: SymbolU32 {
                        value: 7,
                    },
                },
                alias: None,
                exposing: [
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 8,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 9,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [],
                        },
                    },
                    Export {
                        span: Index(
                            1,
                        ),
                        typ: Type {
                            name: CapitalizedIdentifier {
                                name: SymbolU32 {
                                    value: 10,
                                },
                                span: Index(
                                    1,
                                ),
                            },
                            constructors: [
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 4,
                                    },
                                    span: Index(
                                        1,
                                    ),
                                },
                                CapitalizedIdentifier {
                                    name: SymbolU32 {
                                        value: 11,
                                    },
                                    span: Index(
                                        1,
                                    ),
                                },
                            ],
                        },
                    },
                ],
            },
        ],
        definitions: [
            Untyped(
                Pattern(
                    Pattern {
                        span: Index(
                            2,
                        ),
                        typ: Identifier(
                            Identifier {
                                name: SymbolU32 {
                                    value: 2,
                                },
                                span: Index(
                                    2,
                                ),
                            },
                        ),
                    },
                    Index(
                        5,
                    ),
                ),
            ),
        ],
        type_definitions: [],
        expressions: {
            Index(
                0,
            ): Expression {
                span: Index(
                    9,
                ),
                expr: Identifier {
                    module: None,
                    identifier: CapitalizedIdentifier(
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 4,
                            },
                            span: Index(
                                8,
                            ),
                        },
                    ),
                },
            },
            Index(
                1,
            ): Expression {
                span: Index(
                    16,
                ),
                expr: Identifier {
                    module: None,
                    identifier: CapitalizedIdentifier(
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 4,
                            },
                            span: Index(
                                15,
                            ),
                        },
                    ),
                },
            },
            Index(
                2,
            ): Expression {
                span: Index(
                    22,
                ),
                expr: Identifier {
                    module: None,
                    identifier: CapitalizedIdentifier(
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 4,
                            },
                            span: Index(
                                21,
                            ),
                        },
                    ),
                },
            },
            Index(
                3,
            ): Expression {
                span: Index(
                    28,
                ),
                expr: Identifier {
                    module: None,
                    identifier: CapitalizedIdentifier(
                        CapitalizedIdentifier {
                            name: SymbolU32 {
                                value: 4,
                            },
                            span: Index(
                                27,
                            ),
                        },
                    ),
                },
            },
            Index(
                4,
            ): Expression {
                span: Index(
                    4,
                ),
                expr: Identifier {
                    module: None,
                    identifier: Identifier(
                        Identifier {
                            name: SymbolU32 {
                                value: 2,
                            },
                            span: Index(
                                4,
                            ),
                        },
                    ),
                },
            },
            Index(
                5,
            ): Expression {
                span: Index(
                    30,
                ),
                expr: PatternMatching {
                    expression: Index(
                        4,
                    ),
                    branches: [
                        PatternMatchingBranch {
                            span: Index(
                                10,
                            ),
                            pattern: Pattern {
                                span: Index(
                                    7,
                                ),
                                typ: Named {
                                    pattern: Pattern {
                                        span: Index(
                                            5,
                                        ),
                                        typ: Hole,
                                    },
                                    name: Identifier {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Index(
                                            6,
                                        ),
                                    },
                                },
                            },
                            condition: None,
                            body: Index(
                                0,
                            ),
                        },
                        PatternMatchingBranch {
                            span: Index(
                                17,
                            ),
                            pattern: Pattern {
                                span: Index(
                                    14,
                                ),
                                typ: Named {
                                    pattern: Pattern {
                                        span: Index(
                                            12,
                                        ),
                                        typ: Identifier(
                                            Identifier {
                                                name: SymbolU32 {
                                                    value: 5,
                                                },
                                                span: Index(
                                                    11,
                                                ),
                                            },
                                        ),
                                    },
                                    name: Identifier {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Index(
                                            13,
                                        ),
                                    },
                                },
                            },
                            condition: None,
                            body: Index(
                                1,
                            ),
                        },
                        PatternMatchingBranch {
                            span: Index(
                                23,
                            ),
                            pattern: Pattern {
                                span: Index(
                                    20,
                                ),
                                typ: Named {
                                    pattern: Pattern {
                                        span: Index(
                                            18,
                                        ),
                                        typ: String_(
                                            SymbolU32 {
                                                value: 3,
                                            },
                                        ),
                                    },
                                    name: Identifier {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Index(
                                            19,
                                        ),
                                    },
                                },
                            },
                            condition: None,
                            body: Index(
                                2,
                            ),
                        },
                        PatternMatchingBranch {
                            span: Index(
                                29,
                            ),
                            pattern: Pattern {
                                span: Index(
                                    26,
                                ),
                                typ: Named {
                                    pattern: Pattern {
                                        span: Index(
                                            24,
                                        ),
                                        typ: Float(
                                            5.0,
                                        ),
                                    },
                                    name: Identifier {
                                        name: SymbolU32 {
                                            value: 3,
                                        },
                                        span: Index(
                                            25,
                                        ),
                                    },
                                },
                            },
                            condition: None,
                            body: Index(
                                3,
                            ),
                        },
                    ],
                },
            },
        },
        expression_types: {
            Index(
                0,
            ): None,
            Index(
                1,
            ): None,
            Index(
                2,
            ): None,
            Index(
                3,
            ): None,
            Index(
                4,
            ): None,
            Index(
                5,
            ): None,
        },
    },
    [],
)

{
    Index(
        0,
    ): Span {
        start: Index(
            1,
        ),
        end: Index(
            1,
        ),
    },
    Index(
        1,
    ): Span {
        start: Index(
            0,
        ),
        end: Index(
            0,
        ),
    },
    Index(
        2,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        3,
    ): Span {
        start: Index(
            2,
        ),
        end: Index(
            2,
        ),
    },
    Index(
        4,
    ): Span {
        start: Index(
            5,
        ),
        end: Index(
            5,
        ),
    },
    Index(
        5,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            7,
        ),
    },
    Index(
        6,
    ): Span {
        start: Index(
            9,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        7,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            9,
        ),
    },
    Index(
        8,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            11,
        ),
    },
    Index(
        9,
    ): Span {
        start: Index(
            11,
        ),
        end: Index(
            11,
        ),
    },
    Index(
        10,
    ): Span {
        start: Index(
            7,
        ),
        end: Index(
            11,
        ),
    },
    Index(
        11,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        12,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            12,
        ),
    },
    Index(
        13,
    ): Span {
        start: Index(
            14,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        14,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            14,
        ),
    },
    Index(
        15,
    ): Span {
        start: Index(
            16,
        ),
        end: Index(
            16,
        ),
    },
    Index(
        16,
    ): Span {
        start: Index(
            16,
        ),
        end: Index(
            16,
        ),
    },
    Index(
        17,
    ): Span {
        start: Index(
            12,
        ),
        end: Index(
            16,
        ),
    },
    Index(
        18,
    ): Span {
        start: Index(
            17,
        ),
        end: Index(
            17,
        ),
    },
    Index(
        19,
    ): Span {
        start: Index(
            19,
        ),
        end: Index(
            19,
        ),
    },
    Index(
        20,
    ): Span {
        start: Index(
            17,
        ),
        end: Index(
            19,
        ),
    },
    Index(
        21,
    ): Span {
        start: Index(
            21,
        ),
        end: Index(
            21,
        ),
    },
    Index(
        22,
    ): Span {
        start: Index(
            21,
        ),
        end: Index(
            21,
        ),
    },
    Index(
        23,
    ): Span {
        start: Index(
            17,
        ),
        end: Index(
            21,
        ),
    },
    Index(
        24,
    ): Span {
        start: Index(
            22,
        ),
        end: Index(
            22,
        ),
    },
    Index(
        25,
    ): Span {
        start: Index(
            24,
        ),
        end: Index(
            24,
        ),
    },
    Index(
        26,
    ): Span {
        start: Index(
            22,
        ),
        end: Index(
            24,
        ),
    },
    Index(
        27,
    ): Span {
        start: Index(
            26,
        ),
        end: Index(
            26,
        ),
    },
    Index(
        28,
    ): Span {
        start: Index(
            26,
        ),
        end: Index(
            26,
        ),
    },
    Index(
        29,
    ): Span {
        start: Index(
            22,
        ),
        end: Index(
            26,
        ),
    },
    Index(
        30,
    ): Span {
        start: Index(
            4,
        ),
        end: Index(
            26,
        ),
    },
}
